--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,83 @@ SESSION_COOKIE_SECURE=false
 ENABLE_SAML=false
 
 # =============================================================================
+# SECURITY SETTINGS
+# =============================================================================
+
+# --- Password Policy ---
+# Minimum password length (default: 12)
+PASSWORD_MIN_LENGTH=12
+
+# Require uppercase letters in passwords (default: true)
+PASSWORD_REQUIRE_UPPERCASE=true
+
+# Require lowercase letters in passwords (default: true)
+PASSWORD_REQUIRE_LOWERCASE=true
+
+# Require digits in passwords (default: true)
+PASSWORD_REQUIRE_DIGIT=true
+
+# Require special characters in passwords (default: true)
+PASSWORD_REQUIRE_SPECIAL=true
+
+# --- Account Lockout ---
+# Number of failed login attempts before lockout (default: 5)
+LOCKOUT_THRESHOLD=5
+
+# Lockout duration in minutes (default: 15)
+LOCKOUT_DURATION_MINUTES=15
+
+# --- Session Security ---
+# Session inactivity timeout in minutes (default: 60)
+SESSION_TIMEOUT_MINUTES=60
+
+# Absolute session lifetime in hours (default: 24)
+SESSION_ABSOLUTE_TIMEOUT_HOURS=24
+
+# --- Security Headers ---
+# Enable HSTS header - only enable with HTTPS (default: false)
+ENABLE_HSTS=false
+
+# HSTS max-age in seconds (default: 31536000 = 1 year)
+HSTS_MAX_AGE=31536000
+
+# X-Frame-Options header value (default: DENY)
+X_FRAME_OPTIONS=DENY
+
+# Referrer-Policy header value (default: strict-origin-when-cross-origin)
+REFERRER_POLICY=strict-origin-when-cross-origin
+
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+
+# SQLite database path (default: sqlite:////app/data/wingman.db)
+DATABASE_URL=sqlite:////app/data/wingman.db
+
+# =============================================================================
+# OIDC SSO CONFIGURATION (Optional - for Keycloak, Okta, Azure AD, etc.)
+# =============================================================================
+
+# Enable OIDC authentication (default: false)
+ENABLE_OIDC=false
+
+# OIDC Provider Configuration
+OIDC_ISSUER=https://keycloak.example.com/realms/wingman
+OIDC_CLIENT_ID=wingman
+OIDC_CLIENT_SECRET=your-client-secret-here
+OIDC_DISPLAY_NAME=Company SSO
+
+# OIDC Scopes (default: openid profile email)
+OIDC_SCOPES=openid profile email
+
+# Role mapping: JSON mapping OIDC groups/roles to Wingman roles
+# Example: {"admin": ["wingman-admins"], "operator": ["wingman-operators"]}
+OIDC_ROLE_MAPPING={}
+
+# Default role for new SSO users if no role mapping matches (default: viewer)
+OIDC_DEFAULT_ROLE=viewer
+
+# =============================================================================
 # CLOUDFLARE CONFIGURATION
 # =============================================================================
 
