--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+# Core Flask dependencies
 Flask==3.0.0
 requests==2.32.4
-Werkzeug==3.0.6
-cryptography==42.0.5
+Werkzeug==3.1.5
+cryptography==44.0.1
 bcrypt==4.1.2
 Flask-WTF==1.2.1
 Flask-Limiter==3.5.0
+
+# WebSocket support
 flask-socketio==5.3.6
-python-socketio==5.11.1
-eventlet==0.35.2
+python-socketio==5.14.0
+eventlet==0.40.3
+
+# SAML support
 python3-saml==1.16.0
+
+# Database (SQLAlchemy)
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+SQLAlchemy==2.0.25
+
+# OIDC Authentication
+Authlib==1.3.0
+python-jose[cryptography]==3.3.0
+
+# Build tools (security updates)
+wheel>=0.45.1
