--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,18 @@
 # Domain Configuration
 DOMAIN=yourdomain.com
 
-# Authentication & Security (NEW!)
+# Flask Secret Key (REQUIRED)
 # Generate a secure secret key with: python3 -c "import secrets; print(secrets.token_hex(32))"
 FLASK_SECRET_KEY=change-this-to-a-long-random-secret-key-minimum-32-characters
-ADMIN_PASSWORD=changeme
+
+# =============================================================================
+# INITIAL ADMIN SETUP
+# =============================================================================
+# On first startup, Wingman will generate a one-time setup token and display it
+# in the logs. Use this token to log in as 'admin' and set your password.
+# Check the logs with: docker logs <container_name>
+#
+# The token looks like: One-time token: xK7mN9pQ2rS5tU8vW1xY4zA7bC0dE3fG
 
 # =============================================================================
 # AUTHENTICATION SETTINGS (Optional)
